--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/http-status": "^0.2.30",
     "@types/validator": "^13.12.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-status": "^2.0.0",
     "mongoose": "^8.8.2",
     "ts-node-dev": "^2.0.0",
     "validator": "^13.12.0",
